# patient-encounter-system

./: README.md  pyproject.toml  requirements.txt
.bandit/: bandit-report.txt
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: models.py
src/patient_encounter_systemm/: database.py  main.py
src/patient_encounter_systemm/models/: db_trial_ops.py  models.py
src/patient_encounter_systemm/schemas/: schemas.py
src/patient_encounter_systemm/services/: crud.py
src/schemas/: schemas.py
src/services/: crud.py
tests/: .coverage  conftest.py  test_api.py  test_db.py  test_models.py
