[project]
name = "patient-encounter-systemm"
version = "0.1.0"
description = ""
authors = [
    {name = "underoos14",email = "varnik45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "black (>=26.1.0,<27.0.0)"
]

[tool.poetry]
packages = [{include = "patient_encounter_systemm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=patient_encounter_systemm --cov-fail-under=80"

[tool.pylint]
disable = ["missing-module-docstring"]